--- a/assets/giao_dien_home/assets/css/style.css
+++ b/assets/giao_dien_home/assets/css/style.css
@@ -86,7 +86,7 @@
   margin-left: 15px;
 }
 .donmua nav ul li a{
-  color: #fff;
+  color: black;
   display: block;
   padding: 10px 30px;
   position: relative;
